phase9-gitops-platform/mesh/kiali/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kiali-platform
  namespace: kiali
  labels:
    app.kubernetes.io/part-of: phase9-gitops
spec:
  host: kiali-platform.apps.ocp01.npd.co
  to:
    kind: Service
    name: kiali
  port:
    targetPort: 20001
  tls:
    # Kiali listen TLS :20001 — edge sẽ HTTP→HTTPS → "Client sent an HTTP request to an HTTPS server"
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
